src/common.scss
body {
  background: url("https://midburn.org/wp-content/uploads/2017/01/poicamp.jpg");
  background-repeat: no-repeat;
  background-position: top center;
  background-attachment: fixed;
  background-size: cover;
}

.card {
  padding: 40px;
  background-color: #f1f1f5;
  border-radius: 10px;
  box-shadow: 0px 0px 6px 2px rgba(255, 255, 255, 0.55);
  margin: 20px;
}

.modal-dialog {
  background-color: #f1f1f5;
  border-radius: 10px;
}

.modal-content {
  background-color: #f1f1f5;
  border-radius: 10px;
  box-shadow: 0px 0px 6px 2px rgba(255, 255, 255, 0.55);
}

.btn {
  border-radius: 21px;
}

.alert-danger {
  background-color: #f2dede;
  border-color: #ebccd1;
  color: #a94442;
}

